[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/EnemyScripts/Cocoon.gd" type="Script" id=1]
[ext_resource path="res://Animations/Hit.tres" type="Animation" id=2]
[ext_resource path="res://Scenes/EnemyScenes/Spiders/Spiderling.tscn" type="PackedScene" id=3]
[ext_resource path="res://Materials/NoOutline.tres" type="Material" id=4]
[ext_resource path="res://Scenes/EnemyScenes/Spiders/ShakeAndGlow.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Etc/Circle.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=6]
radius = 25.005

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ShakeAndGlow/Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("ShakeAndGlow/Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 357.56

[node name="Cocoon" type="Area2D" groups=["enemies"]]
pause_mode = 1
position = Vector2( 526, 262 )
script = ExtResource( 1 )
hp = 300.0
spawnAmount = 10
enemy = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 6 )

[node name="ShakeAndGlow" type="Node2D" parent="."]
script = ExtResource( 5 )
dis = 0.1
spd = 0.0
speedVariability = 0.0
distanceVariability = 0.0

[node name="Sprite" type="Sprite" parent="ShakeAndGlow"]
material = ExtResource( 4 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = ExtResource( 2 )
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
